# MLSD_DeepFake

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/: ml_system_design_doc.md
