[project]
name = "mlsd_deepfake"
version = "0.1.0"
description = "Benchmark DeepFake detection methods for anti-fraud"
requires-python = ">=3.10"

[tool.ruff]
line-length = 88
target-version = "py310"
# директории, где будет проверка
src = ["."]
exclude = [
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I"]  # базовые ошибки, импорт
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
